name:                 numbersd
version:              0.1.0
synopsis:             Port of statsd to Haskell
license:              OtherLicense
license-file:         LICENSE
author:               Brendan Hay <brendan@soundcloud.com>
maintainer:           Brendan Hay <brendan@soundcloud.com>
homepage:             http://github.com/brendanhay/numbersd
bug-reports:          http://github.com/brendanhay/numbersd/issues
category:             Metrics, Monitoring
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10
description: .
extra-source-files:   README.md

source-repository head
  type:               git
  location:           git://github.com/brendanhay/numbersd.git

executable numbersd
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: FlexibleInstances
                    , RecordWildCards
                    , TypeSynonymInstances
  ghc-options:       -Wall -rtsopts -threaded
  ghc-prof-options:  -prof -fprof-auto -auto-all -with-rtsopts=-p

  build-depends:      base
                    , aeson
                    , attoparsec
                    , blaze-builder
                    , bytestring
                    , cmdargs
                    , containers
                    , data-lens
                    , data-lens-template
                    , fast-logger
                    , http-types
                    , network
                    , regex-pcre
                    , split
                    , stm
                    , text
                    , time
                    , transformers
                    , wai
                    , warp

test-suite numbersd-properties
  type:               exitcode-stdio-1.0
  main-is:            Properties.hs
  hs-source-dirs:     src, test
  default-language:   Haskell2010
  default-extensions: RecordWildCards
  ghc-options:       -main-is Properties -Wall -threaded

  build-depends:      base
                    , test-framework
                    , test-framework-quickcheck2
                    , test-framework-hunit
                    , HUnit
                    , QuickCheck

test-suite numbersd-benchmarks
  type:               exitcode-stdio-1.0
  main-is:            Benchmarks.hs
  hs-source-dirs:     src, test
  default-language:   Haskell2010
  default-extensions: RecordWildCards
  ghc-options:       -main-is Benchmarks -Wall -threaded

  build-depends:      base
                    , criterion
