name:                 numbersd
version:              0.1.0
synopsis:             Port of statsd to Haskell
license:              OtherLicense
license-file:         LICENSE
author:               Brendan Hay <brendan@soundcloud.com>
maintainer:           Brendan Hay <brendan@soundcloud.com>
homepage:             http://github.com/brendanhay/numbersd
bug-reports:          http://github.com/brendanhay/numbersd/issues
category:             Metrics, Monitoring
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10
description: .
extra-source-files:   README.md

source-repository head
  type:               git
  location:           git://github.com/brendanhay/numbersd.git

executable numbersd
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , RecordWildCards
                    , TypeSynonymInstances
  ghc-options:       -Wall -O2 -rtsopts -threaded
  ghc-prof-options:  -Wall -O2 -prof -fprof-auto -auto-all
                     -with-rtsopts=-p
--                     -with-rtsopts=-s

  build-depends:      base >= 4.5.1.0
                    , aeson
                    , async
                    , attoparsec
                    , blaze-builder
                    , bytestring
                    , cmdargs
                    , conduit
                    , containers
                    , data-lens
                    , data-lens-template
                    , fast-logger
                    , http-types
                    , monad-control
                    , network
                    , network-conduit
                    , regex-pcre
                    , split
                    , statistics
                    , stm
                    , stm-conduit
                    , text
                    , time
                    , transformers
                    , vector
                    , wai
                    , wai-extra
                    , warp
