name:                 numbersd
version:              0.1.0
synopsis:             Port of statsd to Haskell
description:          Port of statsd to Haskell
license:              OtherLicense
license-file:         LICENSE
category:             Metrics, Monitoring
stability:            Experimental
build-type:           Simple
cabal-version:        >= 1.10

author:               Brendan Hay <brendan.g.hay@gmail.com>
maintainer:           Brendan Hay <brendan.g.hay@gmail.com>
homepage:             http://github.com/brendanhay/numbersd
bug-reports:          http://github.com/brendanhay/numbersd/issues

extra-source-files:   README.md

source-repository head
  type:               git
  location:           git://github.com/brendanhay/numbersd.git

executable numbersd
  main-is:            Main.hs
  hs-source-dirs:     src

  default-language:   Haskell2010
  default-extensions: FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , RecordWildCards
                    , TypeSynonymInstances

  ghc-options:       -Wall -O2 -rtsopts -threaded
  ghc-prof-options:  -Wall -prof -fprof-auto -auto-all -with-rtsopts=-hc

  build-depends:      base > 4 && < 5
                    , aeson
                    , async
                    , attoparsec
                    , blaze-builder
                    , bytestring
                    , cmdargs
                    , conduit
                    , containers
                    , data-lens
                    , data-lens-template
                    , fast-logger
                    , http-types
                    , monad-control
                    , network
                    , network-conduit < 0.6.2
                    , regex-pcre
                    , simple-sendfile < 0.2.9
                    , split
                    , statistics
                    , stm
                    , stm-conduit
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , vector
                    , wai
                    , wai-app-static
                    , warp

test-suite numbersd-properties
  type:               exitcode-stdio-1.0
  main-is:            Properties.hs
  hs-source-dirs:     src, test

  default-language:   Haskell2010
  default-extensions: FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , OverloadedStrings
                    , RecordWildCards
                    , TypeSynonymInstances
  ghc-options:       -main-is Properties -Wall -threaded

  build-depends:      base > 4 && < 5
                    , async
                    , attoparsec
                    , blaze-builder
                    , bytestring
                    , cmdargs
                    , conduit
                    , containers
                    , data-lens
                    , data-lens-template
                    , fast-logger
                    , http-types
                    , monad-control
                    , network
                    , network-conduit
                    , regex-pcre
                    , simple-sendfile < 0.2.9
                    , split
                    , statistics
                    , stm
                    , stm-conduit
                    , text
                    , time
                    , transformers
                    , vector
                    , wai
                    , warp
                    , test-framework
                    , test-framework-quickcheck2
                    , test-framework-hunit
                    , HUnit
                    , QuickCheck