name:               vodki
version:            0.1.0
synopsis:           Port of statsd to Haskell
license:            OtherLicense
license-file:       LICENSE
author:             Brendan Hay <brendan@soundcloud.com>
maintainer:         Brendan Hay <brendan@soundcloud.com>
homepage:           http://github.com/brendanhay/vodki
bug-reports:        http://github.com/brendanhay/vodki/issues
category:           Metrics, Monitoring
stability:          Experimental
build-type:         Simple
cabal-version:      >= 1.10

description: .

extra-source-files: README.md

source-repository head
  type:     git
  location: git://github.com/brendanhay/vodki.git

executable vodki
  main-is:          Main.hs

  hs-source-dirs:   src

  default-language: Haskell2010
  default-extensions:
                    OverloadedStrings
                  , DeriveDataTypeable
                  , RecordWildCards
                  , TypeSynonymInstances
                  , FlexibleInstances
                  , MultiParamTypeClasses

  ghc-options:      -Wall -rtsopts -threaded
  ghc-prof-options: -prof -fprof-auto -auto-all -with-rtsopts=-p

  build-depends:    base >= 4.3 && < 5
                  , aeson
                  , attoparsec
                  , bytestring
                  , cmdargs
                  , containers
                  , directory
                  , mtl
                  , network
                  , regex-pcre
                  , setters
                  , stm
                  , time
                  , transformers
